# esp32-arduino-lib-builder

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  build-PlatformIO.sh  build.sh  clean.sh  core_version.h  extractConfigFNs.sh  myBuild.sh  myBuild_with_log.sh  myParametersSet.sh  myParasFake.sh  out  prettiyfiHelpers.sh  sdkconfig  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32c3  sdkconfig.defaults.esp32s2  sdkconfig.esp32  sdkconfig.esp32c3  sdkconfig.esp32s2  setMyDefault.sh  setMyParameters.sh  yourBuild_with_log.sh
.github/workflows/: build.yml  build_sdk_manual_v3.yml  cron.yml  cron_build.yml  docker.yml  main.yml  push.yml  repository_dispatch.yml
components/: arduino
components/arduino_tinyusb/: CMakeLists.txt  Kconfig.projbuild
components/arduino_tinyusb/include/: tusb_config.h
components/arduino_tinyusb/patches/: dcd_dwc2.patch
components/arduino_tinyusb/src/: dcd_dwc2.c  dcd_esp32s2.c  dcd_esp32sx.c
components/esp_rmaker_core/: CMakeCache.txt  CMakeLists.txt  component.mk
components/fb_gfx/: CMakeCache.txt  CMakeLists.txt  fb_gfx.c
components/json/: CMakeLists.txt  idf_component.yml
configs/: builds.json  defconfig.120m  defconfig.16m  defconfig.30m  defconfig.40m  defconfig.40m_200m  defconfig.60m  defconfig.64m  defconfig.80m  defconfig.80m_200m  defconfig.80m_250m  defconfig.bt_bluedroid  defconfig.bt_bluedroid.esp32  defconfig.common  defconfig.debug_debug  defconfig.debug_default  defconfig.debug_info  defconfig.debug_none  defconfig.debug_verbose  defconfig.debug_warning  defconfig.dio  defconfig.dout  defconfig.esp32  defconfig.esp32c2  defconfig.esp32c3  defconfig.esp32c5  defconfig.esp32c6  defconfig.esp32c61  defconfig.esp32h2  defconfig.esp32p4  defconfig.esp32p4_es  defconfig.esp32s2  defconfig.esp32s3  defconfig.esp32s31  defconfig.esp_sr  defconfig.insights  defconfig.opi  defconfig.opi_ram  defconfig.qio  defconfig.qio_ram  (+5 more)
main/: Kconfig.projbuild  component.mk  idf_component.yml  sketch.cpp
patches/: 0001-fix-i2c-optimization-performance-on-esp32.diff  dwc2_esp32_h.diff  esp32c6_provisioning_bluedroid.diff  esp32s2_i2c_ll_master_init.diff  eth_multicast.diff  i2s.diff  lwip_dns_per_netif.diff  lwip_dns_per_netif_2.diff  lwip_max_tcp_pcb.diff  matter_chip_ChipDeviceScanner.diff  matter_closure_patch.h  mmu_map.diff  spi_eth.diff  tinyusb_dcd_dwc2.diff  tinyusb_dcd_esp32sx.diff
tools/: PIO-create-archive.sh  PIO-gen_frmwk_manifest.py  PIO-gen_lib_manifest.py  add_sdk_json.py  archive-build.sh  bt_sdkconfig_gate.py  build-bootloaders.sh  build-hosted.sh  build-libs.sh  check-deploy-needed.sh  combine-artifacts.sh  config.sh  copy-bootloader.sh  copy-bt-variant.sh  copy-libs.sh  copy-mem-variant.sh  copy-to-arduino.sh  cron-gen-matrix.sh  cron.sh  current_commit.sh  gen_pio_lib_manifest.py  gen_pioarduino_manifest.py  gen_platformio_manifest.py  gen_tools_json.py  get_projbuild_gitconfig.py  git-update.sh  install-arduino.sh  install-esp-idf.sh  patch-tinyusb.sh  prepare-ci.sh  prepare-libs.sh  push-to-arduino.sh  repository_dispatch.sh  sdk_includes.py  update-components.sh  version-v4.4.2.sh
tools/config_editor/: README.md  app.py  compile.py  editor.py  pyproject.toml  requirements.txt  settings.py  style.tcss  targets.py  widgets.py
tools/config_editor/config_editor/: main.py  pyinstaller.py  style.tcss
tools/docker/: Dockerfile  README.md  entrypoint.sh  run.ps1  run.sh
tools/testing/: test_bt_base_provides_lib.sh  test_bt_sdkconfig_gate.py  test_sdk_includes.py
